[gd_scene load_steps=8 format=3 uid="uid://cjip6juyime05"]

[ext_resource type="Script" path="res://Logic/components/component_gloam_manager.gd" id="1_x2mmc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_ono5k"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_jqk21"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_cyu3m"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_ry88a"]

[sub_resource type="FogMaterial" id="FogMaterial_vi120"]
density = -1.0
height_falloff = 0.2
edge_fade = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h1yy2"]
radius = 1.0

[node name="component_gloam_manager" type="Node3D"]
script = ExtResource("1_x2mmc")

[node name="FogVolume" type="FogVolume" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
size = Vector3(0, 0, 0)
shape = 0
material = SubResource("FogMaterial_vi120")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0.920667, 0.86, 1)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 16.0
shadow_enabled = true
omni_range = 4.0

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.00004, 0, 0, 0, 1.00004, 0, 0, 0, 1.00004, 0, 0, 0)
shape = SubResource("CylinderShape3D_h1yy2")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_ono5k")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("3_jqk21")
initial_state = NodePath("Outside")

[node name="Outside" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_cyu3m")

[node name="on_inside" type="Node" parent="StateChart/CompoundState/Outside"]
script = ExtResource("5_ry88a")
to = NodePath("../../Inside")
event = &"on_inside"

[node name="Inside" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_cyu3m")

[node name="on_outside" type="Node" parent="StateChart/CompoundState/Inside"]
script = ExtResource("5_ry88a")
to = NodePath("../../Outside")
event = &"on_outside"
